--- a/configserver/src/main/resources/application.properties
+++ b/configserver/src/main/resources/application.properties
@@ -1,3 +1,3 @@
 server.port=8888
 spring.application.name=CONFIG-SERVER
-spring.cloud.config.server.git.uri=
+spring.cloud.config.server.git.uri= https://github.com/harishkavatekar/LibraryManagementApp/tree/master/git-config-repo
