--- a/bookmanagement/src/main/resources/application.properties
+++ b/bookmanagement/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 
-
+spring.application.name= BOOK-SERVICE
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=create
 
